# ShotX

./: .gitignore  LICENSE  README.md  README.zh_CN.md  Resources.qrc  ShotX.pro  about.cpp  about.h  main.cpp  mainwindow.cpp  mainwindow.h  screenshots.cpp  screenshots.h  setup_package_user.iss  systeminfo.cpp  systeminfo.h  toolboxwindow.cpp  toolboxwindow.h  trayiconwindow.cpp  trayiconwindow.h
.github/workflows/: mac.yml  ubuntu.yml  windows.yml
GuiHelper/: guiapplicationhelper.cpp  guiapplicationhelper.h
OtherExample/screenshot/: main.cpp  screenshot.cpp  screenshot.h  screenshot.pro
OtherExample/screenwidget/: screenwidget.cpp
OtherExample/src-old/: Resources.qrc  ShotX.pro  main.cpp  mainwind.cpp  mainwind.h  screen.cpp  screen.h  screenshot.cpp  screenshot.h
OtherExample/src-old/other/: CMakeLists.txt
debian/: README.source  changelog  control  copyright  files
debian/shotx/DEBIAN/: control  md5sums
debian/shotx/usr/share/doc/shotx/: README.Debian
src/: Resources.qrc  ShotX.pro  about.cpp  about.ui  main.cpp  mainwindow.cpp  mainwindow.h  screenshots.cpp  screenshots.h  systeminfo.cpp  systeminfo.h  toolboxwindow.cpp  toolboxwindow.h  trayiconwindow.cpp  trayiconwindow.h
src/GuiHelper/: guiapplicationhelper.cpp  guiapplicationhelper.h
